--- a/sections/featured-posts-similar.liquid
+++ b/sections/featured-posts-similar.liquid
@@ -9,6 +9,7 @@
 
     assign columns_desktop = section.settings.columns_desktop
     assign columns_mobile = section.settings.columns_mobile
+    assign content_alignment = section.settings.content_alignment
 
     assign bg_color = section.settings.bg_color | default: 'transparent'
     assign text_color = section.settings.text_color | default: 'inherit'
@@ -65,7 +66,7 @@
 %}
 {% if similarItems.size > 0 %}
     <div
-        class="featured-posts full_width--{{ full_width }}"
+        class="featured-posts full_width--{{ full_width }} content--{{ content_alignment }}"
         style="{{ styles }}"
     >
         <div class="page-width container">
@@ -186,6 +187,26 @@
             "step": 1,
             "default": 4,
             "label": "Number of columns on desktop"
+        },
+        {
+            "type": "select",
+            "id": "content_alignment",
+            "options": [
+                {
+                    "value": "left",
+                    "label": "Left"
+                },
+                {
+                    "value": "center",
+                    "label": "Center"
+                },
+                {
+                    "value": "right",
+                    "label": "Right"
+                }
+            ],
+            "default": "left",
+            "label": "Text alignment"
         },
         {
             "type": "select",
